# P8-Trajectory

./: .gitignore  .gitmodules  LICENSE  README.md  TED.py  notes.md  requirements.txt  test.py
.github/workflows/: test.yml
Evaluation/: _file_access_helper_functions.py  compression_ratio.py  main.py  query_accuracy.py  query_creation.py  querying.py  reference_set_comparison.py  visualize.py
Evaluation/Queries/: _helper_functions_and_classes.py  count.py  distance.py  how_long.py  knn.py  when.py  window.py
Evaluation/files/: grid_search_results.csv
ML/: DTW-embedding_and_clustering.py  TrajectoryTransformer.py  embed.py  grid_search.py  grid_search_params.yml  reference_set_construction.py  requirements.txt  rune.py  test.py  test2.py  transformers.py  trash_tests.py
ML/Evaluation/: MaxHeap.py  _file_access_helper_functions.py  compression_ratio.py  grid_search.py  main.py  query_accuracy.py  query_creation.py  querying.py
ML/Evaluation/Queries/: _helper_functions_and_classes.py  count.py  distance.py  how_long.py  knn.py  when.py  where.py  window.py
ML/Evaluation/files/: grid_search_results.csv  original_query_results.pkl  queries_for_evaluation.pkl
OSTC/: .clang-tidy  CMakeLists.txt  Makefile  compile_commands.json  main.cpp  pyproject.toml  setup.py  todo.md
OSTC/include/: compress.hpp  distance.hpp  example_trajectories.hpp  haversine.hpp  trajectory.hpp
OSTC/src/: distance.cpp  main.cpp  trajectory.cpp
OSTC/stubs/: ostc.pyi
OSTC/tests/: CMakeLists.txt  test1.cpp
OSTC/tests/compress/: compress.cpp  compress_tests.cpp
OSTC/tests/distance/: distance_tests.cpp
OSTC/tests/trajectories/: gtest_skip_test.cpp  ostc_tests.cpp  samplepoints_tests.cpp  trajectory_tests.cpp
__CACHE/: sample_dataframe.parquet  sample_unique_trajectories.parquet
src/: __main__.py  main.py  test.py
src/components/: get_sample_matched_data.py  list_of_id_traj_tuples_to_dfs.py  loaddata.py  mapmatching.py  osmloader.py  visualize.py
src/components/ML/: TrajectoryTransformer.py  grid_search.py  grid_search_params.yml  reference_set_construction.py  train_simclr.py  trash_tests.py
tests/: test_sample.py
tools/: data-tools.py
tools/scripts/: _constrain_coordinates.py  _convert_timestamp_to_unix.py  _deduplicate.py  _delimit_trajectory_length.py  _get_data.py  _load_data.py  _preprocess.py  _remove_illegal_points.py  _ten_trajectories.py  _timestamporder.py
